force-app/main/default/objects/webm__Field_Mapping__c/webm__Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>Field Mapping</label>
    <nameField>
        <displayFormat>m{00000000}</displayFormat>
        <label>Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FIeld Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>