force-app/main/default/objects/webm__Field_Mapping__c/fields/webm__isChildRelationship__c.field-meta.xml
<CustomField>
    <fullName>webm__isChildRelationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isChildRelationship</label>
    <type>Checkbox</type>
</CustomField>