force-app/main/default/objects/webm__Field_Mapping__c/fields/webm__Salesforce_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>webm__Salesforce_Field_Id__c</fullName>
    <label>Salesforce Field Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>