force-app/main/default/objects/webm__Field_Mapping__c/fields/webm__Text_Input_Label__c.field-meta.xml
<CustomField>
    <fullName>webm__Text_Input_Label__c</fullName>
    <label>Text Input Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>