force-app/main/default/objects/webm__Field_Mapping__c/fields/webm__Text_Input_Options__c.field-meta.xml
<CustomField>
    <fullName>webm__Text_Input_Options__c</fullName>
    <label>Text Input Options</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>