force-app/main/default/objects/webm__Field_Mapping__c/fields/webm__Text_Input_Required__c.field-meta.xml
<CustomField>
    <fullName>webm__Text_Input_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Text Input Required</label>
    <type>Checkbox</type>
</CustomField>