force-app/main/default/objects/webm__Field_Mapping__c/fields/webm__Webmerge_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>webm__Webmerge_Field_Name__c</fullName>
    <label>Webmerge Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>