force-app/main/default/objects/webm__Field_Mapping__c/fields/webm__Webmerge_Mapping__c.field-meta.xml
<CustomField>
    <fullName>webm__Webmerge_Mapping__c</fullName>
    <label>Webmerge Mapping</label>
    <referenceTo>webm__Webmerge_Mapping__c</referenceTo>
    <relationshipLabel>FIeld Mappings</relationshipLabel>
    <relationshipName>FIeld_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>